# django-api-rest

./: .gitignore  README.md  pyproject.toml  requirements.txt
api_rest/: settings.py  urls.py
api_swagger/: apps.py  urls.py
authentication/: serializers.py  urls.py  views.py
movies/: filters.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
